# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

ohos_source_set("frame_load") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_no_nvcall = true
    cfi_vcall_icall_only = true
    debug = false
  }
  cflags = [
    "-O3",
    "-fno-semantic-interposition",
    "-fwhole-program-vtables",
    "-flto",
    "-fno-unwind-tables",
    "-fno-asynchronous-unwind-tables",
  ]
  cflags_cc = [
    "-std=c++17",
    "-fvisibility-inlines-hidden",
  ]

  sources = [ "src/rs_frame_blur_predict.cpp" ]

  include_dirs = [
    "include",
    "$graphic_2d_root/rosen/modules/render_service_base/include",
  ]

  external_deps = [
    "hilog:libhilog",
    "skia:skia_canvaskit",
  ]

  deps = [
    "$graphic_2d_root/rosen/modules/render_service_base:render_service_base_src",
    "$graphic_2d_root/rosen/modules/frame_report:frame_report",
  ]

  part_name = "graphic_2d"
  subsystem_name = "graphic"
}
