# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")
import(
    "//foundation/graphic/graphic_2d/rosen/modules/render_service_base/config.gni")

## Build libglfw_render_context.so {{{
config("libglfw_render_context_config") {
  visibility = [ ":*" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-std=c++17",
  ]
}

config("libglfw_render_context_public_config") {
  include_dirs = [ "export" ]
}

if (rosen_preview) {
  ohos_shared_library("libglfw_render_context") {
    sources = [ "src/glfw_render_context.cpp" ]

    configs = [ ":libglfw_render_context_config" ]

    public_configs = [ ":libglfw_render_context_public_config" ]

    deps = [ "//third_party/glfw:glfw" ]

    external_deps = [
      "hilog:libhilog",
    ]

    part_name = "graphic_2d"
    subsystem_name = "graphic"
  }
} else {
  group("libglfw_render_context") {
  }
}
## Build libglfw_render_context.so }}}
